name:                pure-ribbon
version:             0.8.0.0
homepage:            purehs.org/doc/pure-ribbon
license:             BSD3
license-file:        LICENSE
author:              Sean Hickman
maintainer:          sean@grumply.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/grumply/pure-ribbon.git

library
  exposed-modules:
      Pure.Ribbon

  other-modules:
      Pure.Ribbon.Internal
    , Pure.Ribbon.Scroll

  build-depends:
    base,
    pure-elm,
    pure-lifted

  hs-source-dirs:      src
  default-language:    Haskell2010
